<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/MainBackground"
    android:id="@+id/loading_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@color/MainBackground"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<com.victor.loading.book.BookLoading
    android:id="@+id/bookloading"
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:layout_gravity="center" />

        <TextView
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/WhiteColor"
            android:text="@string/PleaseWait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

<LinearLayout
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/WhiteColor"
        android:text="@string/InternetConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/Retry"
        android:layout_marginTop="15dp"
        android:background="@color/WhiteColor"
        android:layout_gravity="center"
        android:layout_width="130dp"
        android:layout_height="30dp" />

</LinearLayout>


</RelativeLayout>