<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="7dp">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/career_imag_view"
                android:layout_margin="3dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/CareerListImage" />

            <TextView
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/BlackColor"
                android:text="@string/CourseList"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:id="@+id/career_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:padding="5dp"
                android:src="@drawable/listrightarrow"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/RightArrow" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>