<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/main_gadient_background"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_navigation_layout"
        android:background="@drawable/main_background_gradient"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:id="@+id/navigation_btn_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="fitCenter"
                android:background="@color/TransparentColor"
                android:padding="15dp"
                android:id="@+id/back_button"
                android:src="@drawable/navbackbutton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/NavigationButton" />

            <TextView
                android:id="@+id/navigation_back_title"
                android:textSize="22sp"
                android:paddingTop="10dp"
                android:text="@string/Back"
                android:textColor="@color/WhiteColor"

                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">


        </LinearLayout>


        <ImageButton
            android:visibility="gone"
            android:scaleType="fitCenter"
            android:background="@color/TransparentColor"
            android:padding="10dp"
            android:id="@+id/filter_button"
            android:src="@drawable/filter_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/FilterButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Search_button_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/course_search_btn"
            android:text="@string/HomeCourse"
            android:textColor="@color/colorPrimary"
            android:background="@color/WhiteColor"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/college_search_btn"
            android:text="@string/HomeCollege"
            android:textColor="@color/WhiteColor"
            android:background="@color/SilverColor"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/Snackbar_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/course_search_card_view"
        android:visibility="gone"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/SearchPageSelectCourse" />

            <Button
                android:id="@+id/search_btn_course"
                android:textColor="@color/WhiteColor"
                android:text="@string/Search"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="40dp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:visibility="visible"
        android:id="@+id/college_search_card_view"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:hint="@string/SearchPageSelectState" />

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:hint="@string/SearchPageSelectDistrict" />

            <Button
                android:id="@+id/search_btn_college"
                android:textColor="@color/WhiteColor"
                android:text="@string/Search"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="30dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:visibility="visible"
        android:layout_weight="1"
        android:id="@+id/course_search_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:layout_weight="1"
        android:id="@+id/course_college_search_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:layout_weight="1"
        android:id="@+id/college_search_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recycler_loading_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ProgressBar
            android:indeterminateTint="@color/WhiteColor"
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="40dp"
        android:visibility="gone"
        android:id="@+id/loading_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/loading_inner_view"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.victor.loading.book.BookLoading
                android:id="@+id/bookloading"
                android:layout_width="150dp"
                android:layout_height="100dp"
                />

            <TextView
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/WhiteColor"
                android:text="@string/PleaseWait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/WhiteColor"
                android:text="@string/InternetConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/Retry"
                android:layout_marginTop="15dp"
                android:background="@color/WhiteColor"
                android:layout_gravity="center"
                android:layout_width="130dp"
                android:layout_height="30dp" />

        </LinearLayout>

    </RelativeLayout>

    <ExpandableListView
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:id="@+id/lvExp2"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

</LinearLayout>