<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@drawable/dialoug_background"
    android:padding="5dp"
    android:weightSum="100">

        <RelativeLayout
            android:background="@color/TransparentColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/TransparentColor"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/WhiteColor"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/FilterInfo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:paddingStart="5dp"
                    android:id="@+id/course_filter_spinner"
                    android:background="@color/WhiteColor"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/WhiteColor"
                    android:hint="@string/SelectCourseLevel"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:textColor="@color/WhiteColor"
                    android:background="@drawable/button_corner_radius"
                    android:id="@+id/btn_filter"
                    android:text="@string/Filter"
                    android:layout_width="200dp"
                    android:layout_height="40dp" />

                <Button
                    android:layout_gravity="center"
                    android:textColor="@color/WhiteColor"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cancel_button_background"
                    android:id="@+id/btn_cancel"
                    android:text="@string/Cancel"
                    android:layout_width="200dp"
                    android:layout_height="40dp" />

            </LinearLayout>

        </RelativeLayout>



    <!--</android.support.v7.widget.CardView>-->


</LinearLayout>